--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -40,6 +40,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Relations\" />
+  </ItemGroup>
+
   <!--<ItemGroup>
     <Folder Include="Services\" />
   </ItemGroup>
