--- a/WebAPI.InfrastructureTests/WebAPI.InfrastructureTests.csproj
+++ b/WebAPI.InfrastructureTests/WebAPI.InfrastructureTests.csproj
@@ -11,13 +11,12 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebAPI.Domain\WebAPI.Domain.csproj" />
     <ProjectReference Include="..\WebAPI.Infrastructure\WebAPI.Infrastructure.csproj" />
-    <ProjectReference Include="..\WebAPI.Services\WebAPI.Services.csproj" />
-    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
