--- a/AngularWebUI/AngularWebUI.csproj
+++ b/AngularWebUI/AngularWebUI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>7893d578-c653-4993-be74-e2d9a36d4b59</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
