--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "RelationDB": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=test;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "RelationDB": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=test;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AppDbContext": "Server=db;Database=AppDbContext;User=sa;Password=Password;"
   },
   "AllowedHosts": "*"
 }
