Finished compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,23 @@
 version: '3.4'
-
 services:
   webapi:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+     - ASPNETCORE_ENVIRONMENT=Development
+     - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "80"
-      - "443"
+      - "5000:80"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
-      - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
+     - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
+     - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
+    depends_on:
+     - db
+  db:
+    image: ${DOCKER_REGISTRY-}mssqldb:latest
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Testing11@@
+    ports:
+      - "1433:1433"
