--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings": {
     "RelationDB": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=test;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "AppDbContext": "Server=db;Database=test;User=sa;Password=Testing11@@;"
+    "AppDbContext": "Server=localhost,1433;Database=test;User=sa;Password=Testing11@@;"
   },
   "AllowedHosts": "*"
 }
