--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   webapi:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: WebAPI\Dockerfile
     environment:
      - ASPNETCORE_ENVIRONMENT=Development
      - ASPNETCORE_URLS=https://+:443;http://+:80
